<resources>
    <string name="app_name">BusinessMonefy</string>
    <string name="total">TOTAL: </string>
    <string name="showGraphics">SHOW\nGRAPHICS</string>
    <string name="showLogs">SHOW\nLOGS</string>
    <string name="title_activity_graphics">GraphicsActivity</string>
    <string name="title_activity_logs">LogsActivity</string>
    <string name="title_activity_plus">PlusActivity</string>
    <string name="title_activity_minus">MinusActivity</string>
    <string name="title_activity_calc">CalcActivity</string>

    <string name="txtSize">25sp</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="percent">%</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="square_root">SQRT</string>
    <string name="gradiation">^</string>
    <string name="delete">DEL</string>
    <string name="negative">+/-</string>
    <string name="backspace">"\u232B"</string>

    <string name="editDialog">EDIT THE RECORD</string>
    <string name="saveED">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="money">Money</string>

    <string name="chooseOrder">Choose order</string>
    <string-array name="orderOptions">
        <item>ASCENDING</item>
        <item>DESCENDING</item>
    </string-array>

    <string-array name="periodNames">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All records</item>
        <item>Other</item>
    </string-array>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    <string name="dateTxtView">"Press to set date"</string>
    <string name="information">Information</string>
    <string name="title_activity_main">BusinessMonefy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="defaultCurrency">USD</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="currencyNames">
        <item>USD</item>
        <item>BGN</item>
        <item>EUR</item>
        <item>GBP</item>
    </string-array>

    <string name="outAndIncoms">Incomings and outcomings (+ / -)</string>
    <string name="incoms">Incomings (+)</string>
    <string name="outcoms">Outcomings (-)</string>
</resources>
