<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.elsys.valiolucho.calculator.CalcActivity"
    tools:showIn="@layout/activity_calc">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textAlignment="textEnd"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textSize="@string/txtSize"
            android:id="@+id/calcDisplay"
            android:hint="@string/zero"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/sen"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/seven"
                android:id="@+id/buttonSeven"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/eight"
                android:id="@+id/buttonEight"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/nine"
                android:id="@+id/buttonNine"/>

            <Button
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete"
                android:text="@string/delete"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ffs"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/four"
                android:id="@+id/buttonFour"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/five"
                android:id="@+id/buttonFive"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/six"
                android:id="@+id/buttonSix"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backspace"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ott"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/one"
                android:id="@+id/buttonOne"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonTwo"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/three"
                android:id="@+id/buttonThree"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus"
                android:text="@string/minus"
                style="?android:attr/buttonBarButtonStyle"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/zpp"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/zero"
                android:id="@+id/zero"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/point"
                android:id="@+id/point"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/percent"
                android:text="@string/percent"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus"
                android:text="@string/plus"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/snd"
            android:layout_gravity="center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/square_root"
                android:text="@string/square_root"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/negative"
                android:text="@string/negative"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gradiation"
                android:text="@string/gradiation"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:textSize="@string/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/equals"
                android:text="@string/equals"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okey"/>
    </LinearLayout>

</RelativeLayout>
