<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroung"
    android:id="@+id/trRelativeLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.elsys.valiolucho.businessmonefy.TransactionActivity"
    tools:showIn="@layout/activity_transaction">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/trNameET"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:inputType="textMultiLine"
        android:gravity="center"
        android:hint="@string/description"
        android:ems="10"
        android:id="@+id/trDescriptionET"
        android:layout_below="@+id/trNameET"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/trDescriptionET"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:inputType="numberSigned|numberDecimal"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/money"
            android:id="@+id/trMoneyET"/>

        <TextView
            android:id="@+id/trCurrencyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/trMoneyET"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="10sp"
            android:layout_alignBaseline="@id/trMoneyET"
            android:text="BGN"/>
    </RelativeLayout>


</RelativeLayout>
